<?xml version="1.0"?>
<package format="3">
  <name>depth_estimation_pkg</name>
  <version>0.2.0</version>
  <description>Depth estimation using ZoeDepth</description>
  <maintainer email="ellenz@bu.edu">ellen</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
